2005-06-08 Magnus Hagdorn
 * glide_thk.f90: fixed bug #132

2005-06-06 Magnus Hagdorn
 * glimmer_coordinates.f90: new module for handling 2d, regular 
   coordinate systems
 * Makefile.am: added glimmer_coordinates.f90 to list of glimmer srcs
 * glide_types.f90: add coord systems for ice and velo grids
 * glide.f90: setup coords for ice and velo grids
 * glimmer_log.f90: add accessor to glimmer log unit
 * ncdf_template.f90.in: add optional arguments for data module
 * generate_ncvars.py: add line break to avoid f95 line limit

2005-05-31 Magnus Hagdorn
 * glide_types.f90: initial surface temp for gthf calc is a run-time
   parameter now
 * glide_setup.f90: read surft from config file/print to log
 * glide_lithot.f90: use surft to initialise temp distrib in lithosphere

2005-05-26 Magnus Hagdorn
 * glide_types.f90: add new logical array to lithot, keeping track of
   if a cell has been covered by ice through-out model run
 * glide_lithot.f90: simplify BC
 * gthf.tex: update doc to reflect changes of BC

2005-05-24 Magnus Hagdorn
 * glide_lithot.f90: improve initial conditions
 * test_lithot.f90: make it somewhat more interesting
 * gthf.tex: added documentation
 * grid.tex, temp.tex: added some lables
 * num.tex: hooked up gthf docu
 * Makefile.am: ditto
 * num.tex: fixed version string

2005-05-24 Magnus Hagdorn
 * glide_types.f90: add switch for GTHF calculations, add number of
   timesteps for spinning up GTHF calculations
 * glide_lithot.f90: sort out spin-up routine, initially set temp of top 
   layer to zero
 * glide_setup.f90: add configuration stuff for GTHF
 * glide.f90: only call GTHF routines if enabled in config file
 * eis_glide.f90: hook up GTHF calc and move climate calc
 * simple_glide.f90: ditto
 

2005-05-23 Magnus Hagdorn
 * glide_types.f90: change litho temp calculations to use 20 layers and
   a base at -5000m, allocate one extra element for sparse matrices
 * glide_mask.f90: set mask at margin